--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -78,7 +78,7 @@ jQuery(document).ready(function() {
     }
     $('.checkmobile').bind('change',mobileformat);
 
-    //$('.select2this').select2({width:'100%'});
+    $('.select2this').select2();
     //$('#survey').parsley('validate'); // validate to show warnings at start
 
     // review button show all
@@ -146,7 +146,7 @@ jQuery(document).ready(function() {
             $(row).insertAfter($(this).closest('.row'));
             $(this).closest('.row').find('.add-row').parent().hide();
             $(this).closest('.row').find('.delete-row').parent().show();
-            //$('.select2this').select2({width:'100%'});
+            $('.select2this').select2();
         }
     }
     $('.add-row').bind('click',addrow);
@@ -213,7 +213,7 @@ jQuery(document).ready(function() {
             }
         }
         ls.html(lopts).removeAttr("disabled");
-        //if (ls.hasClass('select2this')) ls.select2({width:'100%'});
+        if (ls.hasClass('select2this')) ls.select2();
     }
     var limitsubjects = function(event) {
         var institution = $(this).val();
@@ -230,8 +230,8 @@ jQuery(document).ready(function() {
             for ( var i in subjectslist[institution] ) opts += "<option>" + i + "</option>";
         }
         ss.html(opts).removeAttr("disabled");
-        //if (ss.hasClass('select2this')) ss.select2({width:'100%'});
-        //if (ls.hasClass('select2this')) ls.select2({width:'100%'});
+        if (ss.hasClass('select2this')) ss.select2();
+        if (ls.hasClass('select2this')) ls.select2();
     }
     $('.institutionselector').bind('change',limitsubjects);
     $('.subjectselector').bind('change',limitlevels);
