--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -288,9 +288,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 
 	<div class="row">
 	    <div class="col-sm-12">
-	        <div class="well">
-	            <h1>Welcome to the LEAPS student survey</h1>
-	        </div>
+            <h1>Welcome to the LEAPS student survey</h1>
 	    </div>
 	</div>
 
@@ -302,12 +300,10 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 			<p>It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
 			<p><strong>Do not close your browser whilst completing the survey.</strong></p>
 	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
-	        <p>Each part presents <strong>instructions at the top</strong> on how to complete the questions in that part.</p> 
 	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
 	        continue to type and your text will be accepted.</p>
 	        <p>If you need to <strong>insert extra rows</strong>, press <strong>add</strong> to get another row. If you want to <strong>delete a row</strong>, press <strong>delete</strong> to remove the row.</p>
-	        <p>Required inputs have an asterisk. Once entered they will become red if there is a problem. You should check that all required inputs are green before proceeding. Inputs that are optional remain white. You will only be able to submit the form once all required questions have been answered.</p>
-	        <!--<p>You can navigate between parts using the <strong>Previous</strong> or <strong>Next</strong> buttons.</p>-->
+	        <p><b>Required inputs have an asterisk.</b> Once entered they will become red if there is a problem. You should check that all required inputs are green before proceeding. Inputs that are optional remain white. You will only be able to submit the form once all required questions have been answered.</p>
         </div>
 	</div>
 
@@ -321,8 +317,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row">
 	    <div class="col-sm-12">
 	        <div class="well">
-	            <h2>Your details</h2>
-	            <p><strong>Part 1 of 6</strong> - please provide your personal details below, to create your record.</p>
+	            <h2>1. Your details</h2>
 	        </div>
 	    </div>
 	</div>
@@ -549,8 +544,8 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row">
 	    <div class="col-sm-12">
 	        <div class="well">
-	            <h2>Qualifications and currently sitting</h2>
-	            <p><strong>Part 2 of 6</strong> - Please input details of all qualifications 
+	            <h2>2. Qualifications and currently sitting</h2>
+	            <p>Please input details of all qualifications 
 	            you have (or are studying for current year) for each year of school. 
 	            Please include any qualifications you sat but did not pass. If you do not yet know your grade, 
 	            select Unknown in the Grade field. If you have any qualifications that do not meet the criteria 
@@ -618,8 +613,8 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row">
 	    <div class="col-sm-12">
 	        <div class="well">
-	            <h2>Potential Applications</h2>
-	            <p><strong>Part 3 of 6</strong> - please list any applications for further or higher education that you are 
+	            <h2>3. Potential Applications</h2>
+	            <p>Please list any applications for further or higher education that you are 
 	            thinking of making. Use one row per application, up to the maximum of 6. If you have not made any decisions yet, 
 	            please feel free to leave this section blank. The more information you add to this section, the more detailed 
 	            your interview will be. Even if you have lots of different ideas, putting examples of some of them in this 
@@ -674,13 +669,13 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row">
 	    <div class="col-sm-12">
 	        <div class="well">
-	            <h2>Interests and achievements</h2>
-	            <p><strong>Part 4 of 6</strong> - please give short details of your extra-curricular interests and achievements e.g. 
-								sport, music, drama, Duke of Edinburgh, prefect etc and they will be discussed in more detail at your interview. 
-								It is recommended that you write your own copy of interests, achievements and work experience in a document elsewhere, 
-								then insert them into this form. You will find the document useful for your personal statement in your UCAS application. 
-								Remember - you won't be able to return to this form! 
-								Use one box per interest, up to the maximum of 6.</p>
+	            <h2>4. Interests and achievements</h2>
+	            <p>Please give short details of your extra-curricular interests and achievements e.g. 
+				sport, music, drama, Duke of Edinburgh, prefect etc and they will be discussed in more detail at your interview. 
+				It is recommended that you write your own copy of interests, achievements and work experience in a document elsewhere, 
+				then insert them into this form. You will find the document useful for your personal statement in your UCAS application. 
+				Remember - you won't be able to return to this form! 
+				Use one box per interest, up to the maximum of 6.</p>
 	        </div>
 	    </div>
 	</div>
@@ -715,14 +710,14 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row">
 	    <div class="col-sm-12">
 	        <div class="well">
-	            <h2>Work and other experience</h2>
-	            <p><strong>Part 5 of 6</strong> - please give short details of any work or voluntary experience you have had e.g. 
-								paid employment, school committees, Access to the Professions events etc and they can be discussed further at 
-								your interview. It is recommended that you write your own copy of interests, achievements and work experience 
-								in a document elsewhere, then insert them into this form. You will find the document useful for your personal 
-								statement in your UCAS application. Remember - you won't be able to return to this form! 
-								Use one row per experience, up to the maximum of 6.</p>
-					</div>
+	            <h2>5. Work and other experience</h2>
+	            <p>Please give short details of any work or voluntary experience you have had e.g. 
+				paid employment, school committees, Access to the Professions events etc and they can be discussed further at 
+				your interview. It is recommended that you write your own copy of interests, achievements and work experience 
+				in a document elsewhere, then insert them into this form. You will find the document useful for your personal 
+				statement in your UCAS application. Remember - you won't be able to return to this form! 
+				Use one row per experience, up to the maximum of 6.</p>
+			</div>
 	    </div>
 	</div>
 
@@ -758,9 +753,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row">
 	    <div class="col-sm-12">
 	        <div class="well">
-	            <h2>Additional academic and career information</h2>
-	            <p><strong>Part 6 of 6</strong> - please provide information about any other factors that affected your 
-	            academic achievements, and provide some details on your career goals and any other post school ideas that you have had.</p>
+	            <h2>6. Additional academic and career information</h2>
 	        </div>
 	    </div>
 	</div>
