--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -294,11 +294,11 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 
 	<div class="row">
 	    <div class="col-sm-12">
-	        <p>You can find out how we use and what we do with your personal data <a href="/policy">here</a>.
-            When you are ready to begin the survey, please read the notes below.</p>
-	        <p>This survey contains six parts. You must complete every part in order to successfully save your responses. It should take no more than 30 minutes to complete, if you prepare in advance. Please have details of your qualifications, personal interests, work experience, and possible University or College applications to hand before you start this survey.</p>
-			<p>It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
-			<p><strong>Do not close your browser whilst completing the survey.</strong></p>
+	        <p>You can find out how we use and what we do with your personal data <a href="/policy">here</a>.</p>
+	        <p>You must complete all of the six parts below. Please have details of your qualifications, personal 
+	        interests, work experience, and possible University or College applications to hand before you start this survey.
+	        It should take no more than 30 minutes to complete, if you prepare in advance.</p>
+			<p><strong>Do not close your browser whilst completing the survey.</strong> It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
 	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
 	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
 	        continue to type and your text will be accepted.</p>
@@ -549,7 +549,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	            you have (or are studying for current year) for each year of school. 
 	            Please include any qualifications you sat but did not pass. If you do not yet know your grade, 
 	            select Unknown in the Grade field. If you have any qualifications that do not meet the criteria 
-	            below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
+	            below, you will have the option to describe them later.</p>
 	        </div>
 	    </div>
 	</div>
