--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -296,7 +296,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	    <div class="col-sm-12">
 	        <p>You can find out how we use and what we do with your personal data <a href="/policy">here</a>.</p>
 	        <p>You must complete all of the six parts below. Please have details of your qualifications, personal 
-	        interests, work experience, and possible University or College applications to hand before you start this survey.
+	        interests, work experience, and possible University or College applications to hand before you start.
 	        It should take no more than 30 minutes to complete, if you prepare in advance.</p>
 			<p><strong>Do not close your browser whilst completing the survey.</strong> It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
 	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
