--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -435,7 +435,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
                     <p>Post code *</p>
 	            </div>
 	            <div class="col-sm-7">
-            		<p><input class="form-control checkpostcode" type="text" name="post_code" id="post_code" data-required="true" data-trigger="focusout" placeholder="Post code *"></p>
+            		<p><input class="form-control checkpostcode" type="text" name="post_code" id="post_code" data-required="true" placeholder="Post code *"></p>
             		<p class="postcodewarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">Please enter a valid UK post code</p>
 	            </div>
 	        </div>
