--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -690,6 +690,8 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
     		<p><textarea class="form-control" name="interest_brief_description" data-maxwords="200" data-trigger="keyup focusout change"></textarea></p>
     	</div>
 	    <div class="col-sm-3">
+            <p class="hidden-xs">Interest title</p>
+    		<p><input type="text" class="form-control" name="interest_title" placeholder="Interest title"></p>
 	    </div>
 	</div>
 
