--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -289,12 +289,16 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	        <p>You must complete all of the six parts below. Please have details of your qualifications, personal 
 	        interests, work experience, and possible University or College applications to hand before you start.
 	        It should take no more than 30 minutes to complete, if you prepare in advance.</p>
-			<p><strong>Do not close your browser whilst completing the survey.</strong> It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
+			<p><strong>Do not close your browser whilst completing the survey.</strong> It is recommended that 
+			you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
 	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
-	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
-	        continue to type and your text will be accepted.</p>
-	        <p>If you need to <strong>insert extra rows</strong>, press <strong>add</strong> to get another row. If you want to <strong>delete a row</strong>, press <strong>delete</strong> to remove the row.</p>
-	        <p><b>Required inputs have an asterisk.</b> Once entered they will become red if there is a problem. You should check that all required inputs are green before proceeding. Inputs that are optional remain white. You will only be able to submit the form once all required questions have been answered.</p>
+	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if 
+	        one is presented, otherwise continue to type and your text will be accepted.</p>
+	        <p>If you need to <strong>insert extra rows</strong>, press <strong>add</strong> to get another row. 
+	        If you want to <strong>delete a row</strong>, press <strong>delete</strong> to remove the row.</p>
+	        <p><b>Required inputs have an asterisk.</b> Once entered they will become red if there is a problem. 
+	        You should check that all required inputs are green before proceeding. Inputs that are optional remain 
+	        white. You will only be able to submit the form once all required inputs have been answered.</p>
         </div>
 	</div>
 
